--- a/src/css/Pokedex.css
+++ b/src/css/Pokedex.css
@@ -1,9 +1,7 @@
-.Pokedex {
-    
-}
 
 .Pokedex-row {
     display: flex;
     justify-content: space-evenly;
     margin-top: 20px;
+    flex-wrap: wrap;
 }
